--- a/source/resources/styles.css
+++ b/source/resources/styles.css
@@ -118,18 +118,18 @@
 .activity-text-top {
   width: 60%;
   x: 20;
-  y: 46%;
+  y: 130;
   opacity: 0.86;
 }
 
 .activity-text-center {
   x: 20;
-  y: 56%;
+  y: 160;
 }
 
 .activity-text-bottom {
   x: 20;
-  y: 66%;
+  y: 190;
 }
 
 .activity-values {  
@@ -147,19 +147,19 @@
 
 .activity-values-top {
   x: 40%;
-  y: 46%;
+  y: 130;
   fill: white;
 }
 
 .activity-values-center {
   x: 40%;
-  y: 56%;
+  y: 160;
   fill: white;  
 }
 
 .activity-values-bottom {
   x: 40%;
-  y: 66%;
+  y: 190;
   fill: white;
 }
 /*###################*/
@@ -194,13 +194,13 @@
   width: 38;
   height: 30;
   x: 13%;
-  y: 77%;
+  y: 74%;
 }
 
 .container-icons-left {
   font-size: 22;
   x: 14%;
-  y: 95%;
+  y: 92%;
   fill: white;
   opacity: 0.6;
 }
@@ -208,20 +208,20 @@
 .container-icons-center{
   font-size: 22;
   x: 50%;
-  y: 87%;
+  y: 251;
   fill: white;
 }
 
 .container-icons-bpm {
   font-size: 18;
   x: 50%;
-  y: 95%;
+  y: 271;
 }
 
 .container-icons-right {
   font-size: 20;
-  x: 84%;
-  y: 90%-1;
+  x: 245;
+  y: 260;
   fill: white;
 }
 
@@ -229,20 +229,60 @@
   fill: fb-extra-dark-gray;
   opacity: 0.4;
   arc-width: 5;
-  x: 76%;
-  y: 79%;
+  x: 221;
+  y: 228;
   width: 50;
   height: 50;
 }
 
-#ARC {
+#ARC-BAT {
   fill: white;
   arc-width: 5;
   sweep-angle: 0;
-  x: 76%;
-  y: 79%;
+  x: 221;
+  y: 228;
   width: 50;
   height: 50;
+}
+
+.arc-activity-background {
+  fill: fb-extra-dark-gray;
+  opacity: 0.4;
+  arc-width: 25;
+  x: 20;
+  y: 220;
+  width: 65;
+  height: 65;
+}
+
+#ARC-CALS {
+  arc-width: 7;
+  opacity: 0.7;
+  sweep-angle: 0;
+  x: 20;
+  y: 220;
+  width: 65;
+  height: 65;
+}
+
+#ARC-DIST {
+  arc-width: 7;
+  opacity: 0.7;
+  sweep-angle: 0;
+  x: 29;
+  y: 229;
+  width: 47;
+  height: 47;
+}
+
+#ARC-STEPS {
+  arc-width: 7;
+  opacity: 0.7;
+  sweep-angle: 0;
+  x: 38;
+  y: 238;
+  width: 29;
+  height: 29;
 }
 /*###################*/
 /*  COLORS - ICONS   */
